<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="UnusedResources">

	<!-- Titles -->

	<string name="form_title_message">Message</string>

	<!-- Menus -->

	<string name="menu_item_new_place">New patch</string>
	<string name="menu_item_edit_place">Edit</string>
	<string name="menu_item_edit_message">Edit</string>
	<string name="menu_item_share_message">Share</string>

	<!-- Preferences: notifications -->

	<string name="pref_notifications_nearby_summary">Messages posted to patches nearby.</string>
	<string name="pref_notifications_own_summary">Messages posted to patches I made</string>
	<string name="pref_notifications_watch_summary">Messages posted to patches I\'m watching.</string>
	<string name="pref_notifications_share_summary">Messages to share a patch or message with me.</string>

	<!-- Alerts -->

	<string name="alert_dirty_send">Post</string>
	<string name="alert_dirty_exit_title_message">Message</string>
	<string name="alert_dirty_exit_message_message">Do you want to post your message?</string>

	<string name="alert_message_sent">Post</string>
	<string name="alert_watch_request_sent">Watch request sent</string>
	<string name="alert_watch_request_canceled">Watch request canceled</string>

	<string name="alert_delete_message_title">Confirm delete</string>
	<string name="alert_delete_message_message">Are you sure you want to delete this message from %1$s?</string>
	<string name="alert_delete_message_message_no_name">Are you sure you want to delete this message?</string>

	<string name="alert_signin_message_watch">Sign in to watch [@schema]es.</string>
	<string name="alert_signin_message_place_new">Sign in to create a new [@string/container_singular_lowercase].</string>

	<!-- Errors -->

	<string name="error_missing_message_to">Select a [@string/container_singular_lowercase] for this message.</string>
	<string name="error_missing_message_content">Select a photo or enter a message.</string>
	<string name="error_missing_share_to">Select at least one user to share with.</string>

	<!-- Help -->

	<!-- Hints -->

	<string name="hint_message_name">Subject</string>
	<string name="hint_message_to">Select [@string/container_singular_lowercase]</string>
	<string name="hint_message_description">Message</string>

	<!-- Menus -->

	<string name="menu_item_share_place">Invite</string>

	<!-- Progress -->

	<string name="progress_upsizing">Activating for messages&#8230;</string>

	<!-- Labels -->

	<string name="label_feed_messages_empty">No messages posted yet</string>
	<string name="label_feed_alerts_empty">No alerts yet</string>
	<string name="label_watching_empty">Watch [@string/container_plural_lowercase] and browse them here</string>
	<string name="label_created_empty">Make [@string/container_plural_lowercase] and browse them here</string>
	<string name="label_sent_empty">No messages posted yet</string>
	<string name="label_feed_messages_title">Messages</string>
	<string name="label_feed_alerts_title">Alerts</string>
	<string name="label_tuning_tune_no_name">If you are currently at this [@string/container_singular_lowercase], help make [@string/name_app] better by tuning the [@string/container_singular_lowercase] for faster and more accurate discovery.</string>
	<string name="label_message_share_title">Share message to&#8230;</string>
	<string name="label_private_description">Users can only see posted messages if you approve their watch request.</string>
	<string name="label_place_create">This patch will be dropped at your current location. Share this patch with friends and get the conversation started! As the patch owner, you will automatically receive any messages posted to this patch.</string>

	<string name="label_trends_popular">Most popular</string>
	<string name="label_trends_active">Most active</string>
	<string name="label_trends_count_popular">Watchers</string>
	<string name="label_trends_count_active">Messages</string>
	<string name="label_trends_header_message_popular">[@string/container_plural] with the most watchers.</string>
	<string name="label_trends_header_message_active">[@string/container_plural] where people have the most to say.</string>

	<string name="label_watcher_enabled">Yes</string>
	<string name="label_watcher_disabled">No</string>
	<string name="label_watcher_enable">Approved:</string>

	<string name="label_message_new_message">Post a message to a patch.</string>
	<string name="label_message_new_to_message">Post a message to %1$s.</string>
	<string name="label_message_edit_message">Edit your message to %1$s.</string>
	<string name="label_message_shared">Shared by</string>

	<string name="label_place_drop_to">Share with</string>
	<string name="label_register_message">You\'ll love [@string/name_app]! Join to post messages, create patches and share with your friends.</string>
	<string name="label_search">Candipatch</string>
	<string name="label_share_to_hint">type to search users</string>
	<string name="label_share_completion_hint">Pick users to share with.</string>

	<string name="label_notification_ticker_place_insert">%1$s: dropped a [@string/container_singular_lowercase]</string>
	<string name="label_notification_ticker_place_insert_nearby">%1$s: dropped a [@string/container_singular_lowercase] nearby</string>
	<string name="label_notification_ticker_place_share">%1$s: invited you to a [@string/container_singular_lowercase]</string>
	<string name="label_notification_ticker_message_insert">%1$s: %2$s</string>
	<string name="label_notification_ticker_message_share">%1$s: shared a message with you</string>
	<string name="label_notification_ticker_photo_insert">%1$s: posted a photo to \'%2$s\'</string>
	<string name="label_notification_ticker_photo_share">%1$s: shared a photo with you</string>

	<!-- Labels: Navigation -->

	<string name="label_drawer_section_places">PATCHES</string>
	<string name="label_drawer_section_trending">TRENDING</string>
	<string name="label_drawer_section_messages">FEEDS</string>

	<string name="label_drawer_item_feed_messages">Messages</string>
	<string name="label_drawer_item_feed_alerts">Alerts</string>
	<string name="label_drawer_item_trend_active">Most active</string>
	<string name="label_drawer_item_trend_popular">Most popular</string>

	<string name="label_view_map">Map</string>
	<string name="label_view_list">List</string>

	<string name="label_user_watching">Watching</string>
	<string name="label_user_created">Owner</string>

	<!-- Labels -->

	<string name="tooltip_place_new_part1">
		Patches let a group of people share messages about places and events!
	</string>
	<string name="tooltip_place_new_part2">
		" &#8226; Parties and sporting events\n &#8226; Family vacations\n &#8226; Projects and meetings"
	</string>
	<string name="tooltip_place_new_part3">
		This patch will be locked to your current location.
		Invite some friends and get the conversation started!
	</string>
	<string name="tooltip_action_item_place_new">Tap to create a new patch.</string>
	<string name="tooltip_list_nearby">Your world is filled with patches! Discover them or create one of your own.</string>
	<string name="tooltip_place_watch">Stay connected to patches by tapping the watch button.</string>
	<string name="tooltip_place_share">Invite your friends to this patch.</string>

	<!-- Buttons -->

	<string name="button_list_share">Invite friends to this patch</string>
	<string name="button_place_share">Invite</string>
	<string name="button_list_watchers_share">Invite friends to this patch to add watchers</string>

</resources>