<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:custom="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:clickable="true"
	android:orientation="vertical">

	<!-- Current user -->

	<View
		android:layout_width="match_parent"
		android:layout_height="@dimen/rule_divider_height"
		android:background="?attr/ruleColor" />

	<com.aircandi.ui.widgets.UserView
		android:id="@+id/user_current"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="?attr/backgroundFormSecondary"
		android:clickable="true"
		android:onClick="onEntityClick"
		custom:layout="@layout/widget_user_view_drawer" />

	<com.aircandi.ui.widgets.AirScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<!-- Patch section -->

			<LinearLayout
				android:id="@+id/group_patches_header"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">

				<com.aircandi.ui.widgets.AirTextLight
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_vertical"
					android:layout_marginLeft="12dp"
					android:layout_marginTop="8dp"
					android:text="@string/label_drawer_section_places"
					android:textAppearance="?android:attr/textAppearance"
					android:textColor="@color/brand_primary"
					custom:textId="@string/label_drawer_section_places" />

				<View
					android:layout_width="match_parent"
					android:layout_height="@dimen/rule_header_height"
					android:background="@color/brand_primary" />
			</LinearLayout>

			<RelativeLayout
				android:id="@+id/item_nearby"
				style="@style/selectable_item"
				android:layout_width="match_parent"
				android:layout_height="@dimen/drawer_item_height"
				android:clickable="true"
				android:onClick="onDrawerItemClick"
				android:orientation="horizontal"
				android:tag="nearby">

				<ImageView
					android:id="@+id/image_patches_nearby"
					android:layout_width="@dimen/image_extra_small"
					android:layout_height="@dimen/image_extra_small"
					android:layout_centerVertical="true"
					android:layout_marginLeft="12dp"
					android:layout_marginRight="6dp"
					android:focusable="false"
					android:padding="3dp"
					android:src="?attr/iconSignal" />

				<com.aircandi.ui.widgets.AirTextLight
					android:id="@id/name"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_centerVertical="true"
					android:layout_toRightOf="@+id/image_patches_nearby"
					android:text="@string/label_drawer_item_nearby"
					android:textAppearance="?android:attr/textAppearanceMedium"
					custom:textId="@string/label_drawer_item_nearby" />
			</RelativeLayout>

			<RelativeLayout
				android:id="@+id/item_watch"
				style="@style/selectable_item"
				android:layout_width="match_parent"
				android:layout_height="@dimen/drawer_item_height"
				android:clickable="true"
				android:onClick="onDrawerItemClick"
				android:orientation="horizontal"
				android:tag="watch">

				<View
					android:layout_width="match_parent"
					android:layout_height="@dimen/rule_divider_height"
					android:background="?attr/ruleColor" />

				<ImageView
					android:id="@+id/image_patches_watch"
					android:layout_width="@dimen/image_extra_small"
					android:layout_height="@dimen/image_extra_small"
					android:layout_centerVertical="true"
					android:layout_marginLeft="12dp"
					android:layout_marginRight="6dp"
					android:focusable="false"
					android:padding="3dp"
					android:src="?attr/iconWatch" />

				<com.aircandi.ui.widgets.AirTextLight
					android:id="@id/name"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_centerVertical="true"
					android:layout_toRightOf="@+id/image_patches_watch"
					android:text="@string/label_drawer_item_watch"
					android:textAppearance="?android:attr/textAppearanceMedium"
					custom:textId="@string/label_drawer_item_watch" />
			</RelativeLayout>

			<RelativeLayout
				android:id="@+id/item_create"
				style="@style/selectable_item"
				android:layout_width="match_parent"
				android:layout_height="@dimen/drawer_item_height"
				android:clickable="true"
				android:onClick="onDrawerItemClick"
				android:orientation="horizontal"
				android:tag="create">

				<View
					android:layout_width="match_parent"
					android:layout_height="@dimen/rule_divider_height"
					android:background="?attr/ruleColor" />

				<ImageView
					android:id="@+id/image_patches_create"
					android:layout_width="@dimen/image_extra_small"
					android:layout_height="@dimen/image_extra_small"
					android:layout_centerVertical="true"
					android:layout_marginLeft="12dp"
					android:layout_marginRight="6dp"
					android:focusable="false"
					android:padding="3dp"
					android:src="?attr/iconEdit" />

				<com.aircandi.ui.widgets.AirTextLight
					android:id="@id/name"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_centerVertical="true"
					android:layout_toRightOf="@+id/image_patches_create"
					android:text="@string/label_drawer_item_create"
					android:textAppearance="?android:attr/textAppearanceMedium"
					custom:textId="@string/label_drawer_item_create" />
			</RelativeLayout>

			<!-- Messages section -->

			<LinearLayout
				android:id="@+id/group_messages_header"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">

				<com.aircandi.ui.widgets.AirTextLight
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_vertical"
					android:layout_marginLeft="12dp"
					android:layout_marginTop="8dp"
					android:text="@string/label_drawer_section_messages"
					android:textAppearance="?android:attr/textAppearance"
					android:textColor="@color/brand_primary"
					custom:textId="@string/label_drawer_section_messages" />

				<View
					android:layout_width="match_parent"
					android:layout_height="@dimen/rule_header_height"
					android:background="@color/brand_primary" />
			</LinearLayout>

			<RelativeLayout
				android:id="@+id/item_feed_messages"
				style="@style/selectable_item"
				android:layout_width="match_parent"
				android:layout_height="@dimen/drawer_item_height"
				android:clickable="true"
				android:onClick="onDrawerItemClick"
				android:orientation="horizontal"
				android:tag="messages">

				<ImageView
					android:id="@+id/image_messages"
					android:layout_width="@dimen/image_extra_small"
					android:layout_height="@dimen/image_extra_small"
					android:layout_centerVertical="true"
					android:layout_marginLeft="12dp"
					android:layout_marginRight="6dp"
					android:focusable="false"
					android:src="?attr/iconStream" />

				<com.aircandi.ui.widgets.AirTextLight
					android:id="@id/name"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_centerVertical="true"
					android:layout_marginRight="10dp"
					android:layout_toLeftOf="@+id/count_messages"
					android:layout_toRightOf="@+id/image_messages"
					android:text="@string/label_drawer_item_feed_messages"
					android:textAppearance="?android:attr/textAppearanceMedium"
					custom:textId="@string/label_drawer_item_feed_messages" />

				<com.aircandi.ui.widgets.AirTextLight
					android:id="@+id/count_messages"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentRight="true"
					android:layout_centerVertical="true"
					android:layout_marginRight="10dp"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textColor="?attr/textColorSecondary"
					tools:text="12" />

			</RelativeLayout>

			<RelativeLayout
				android:id="@+id/item_feed_alerts"
				style="@style/selectable_item"
				android:layout_width="match_parent"
				android:layout_height="@dimen/drawer_item_height"
				android:clickable="true"
				android:onClick="onDrawerItemClick"
				android:orientation="horizontal"
				android:tag="alerts">

				<View
					android:layout_width="match_parent"
					android:layout_height="@dimen/rule_divider_height"
					android:background="?attr/ruleColor" />

				<ImageView
					android:id="@+id/image_alerts"
					android:layout_width="@dimen/image_extra_small"
					android:layout_height="@dimen/image_extra_small"
					android:layout_centerVertical="true"
					android:layout_marginLeft="12dp"
					android:layout_marginRight="6dp"
					android:focusable="false"
					android:src="?attr/iconAlert" />

				<com.aircandi.ui.widgets.AirTextLight
					android:id="@id/name"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_centerVertical="true"
					android:layout_marginRight="10dp"
					android:layout_toRightOf="@+id/image_alerts"
					android:text="@string/label_drawer_item_feed_alerts"
					android:textAppearance="?android:attr/textAppearanceMedium"
					custom:textId="@string/label_drawer_item_feed_alerts" />

				<com.aircandi.ui.widgets.AirTextLight
					android:id="@+id/count_alerts"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_alignParentRight="true"
					android:layout_centerVertical="true"
					android:layout_marginRight="10dp"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textColor="?attr/textColorSecondary"
					tools:text="5" />

			</RelativeLayout>

			<!-- Trending section -->

			<LinearLayout
				android:id="@+id/group_trending_header"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">

				<com.aircandi.ui.widgets.AirTextLight
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_vertical"
					android:layout_marginLeft="12dp"
					android:layout_marginTop="8dp"
					android:text="@string/label_drawer_section_trending"
					android:textAppearance="?android:attr/textAppearance"
					android:textColor="@color/brand_primary"
					custom:textId="@string/label_drawer_section_trending" />

				<View
					android:layout_width="match_parent"
					android:layout_height="@dimen/rule_header_height"
					android:background="@color/brand_primary" />
			</LinearLayout>

			<RelativeLayout
				android:id="@+id/item_trend_activity"
				style="@style/selectable_item"
				android:layout_width="match_parent"
				android:layout_height="@dimen/drawer_item_height"
				android:clickable="true"
				android:onClick="onDrawerItemClick"
				android:orientation="horizontal"
				android:tag="trend_active">

				<ImageView
					android:id="@+id/image_trend_activity"
					android:layout_width="@dimen/image_extra_small"
					android:layout_height="@dimen/image_extra_small"
					android:layout_centerVertical="true"
					android:layout_marginLeft="12dp"
					android:layout_marginRight="6dp"
					android:focusable="false"
					android:padding="3dp"
					android:src="?attr/iconTrend" />

				<com.aircandi.ui.widgets.AirTextLight
					android:id="@id/name"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_centerVertical="true"
					android:layout_toRightOf="@+id/image_trend_activity"
					android:text="@string/label_drawer_item_trend_active"
					android:textAppearance="?android:attr/textAppearanceMedium"
					custom:textId="@string/label_drawer_item_trend_active" />
			</RelativeLayout>

			<RelativeLayout
				android:id="@+id/item_trend_popular"
				style="@style/selectable_item"
				android:layout_width="match_parent"
				android:layout_height="@dimen/drawer_item_height"
				android:clickable="true"
				android:onClick="onDrawerItemClick"
				android:orientation="horizontal"
				android:tag="trend_popular">

				<View
					android:layout_width="match_parent"
					android:layout_height="@dimen/rule_divider_height"
					android:background="?attr/ruleColor" />

				<ImageView
					android:id="@+id/image_trend_popular"
					android:layout_width="@dimen/image_extra_small"
					android:layout_height="@dimen/image_extra_small"
					android:layout_centerVertical="true"
					android:layout_marginLeft="12dp"
					android:layout_marginRight="6dp"
					android:focusable="false"
					android:src="?attr/iconUsers" />

				<com.aircandi.ui.widgets.AirTextLight
					android:id="@id/name"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_centerVertical="true"
					android:layout_toRightOf="@+id/image_trend_popular"
					android:text="@string/label_drawer_item_trend_popular"
					android:textAppearance="?android:attr/textAppearanceMedium"
					custom:textId="@string/label_drawer_item_trend_popular" />
			</RelativeLayout>

			<View
				android:layout_width="match_parent"
				android:layout_height="@dimen/rule_divider_height"
				android:background="?attr/ruleColor" />
		</LinearLayout>
	</com.aircandi.ui.widgets.AirScrollView>

</LinearLayout>